# dune-daq-template

./: .doxyfile  CMakeLists.txt  README.md
apps/: dune-daq-template.cc
doc/html/: Bar_8hh.html  Bar_8hh__incl.map  Bar_8hh__incl.md5  Bar_8hh_source.html  Foo_8hh.html  Foo_8hh_source.html  PrivateHeader_8hh_source.html  annotated.html  classBar-members.html  classBar.html  classFoo-members.html  classFoo.html  classes.html  dir_15ff211856c01675171a41e70a856d6d.html  dir_40d0ac81844a05f8b368d7779808ec7a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
doc/html/search/: all_0.js  files_0.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  searchdata.js
dune-daq-template/: Bar.hpp  Foo.cpp
include/dune-daq-template/: Bar.hh  Foo.hh
src/: Bar.cc
unittest/: CMakeLists.txt  test_bar.cc  test_foo.cc
